# cashback

./: .gitignore  Makefile  README.md  local.env  manage.py  openapi-schema.yml  pyproject.toml
cashbackapi/: asgi.py  pytest.ini  settings.py  urls.py  wsgi.py
cashbackapi/apps/cashback/: admin.py  apps.py  client.py  external_api.py  managers.py  models.py  serializers.py  urls.py  validators.py  views.py
cashbackapi/apps/cashback/migrations/: 0001_initial.py  0002_auto_20201119_2206.py
cashbackapi/tests/: conftest.py
cashbackapi/tests/cashback/: factories.py  test_cashback_api.py  test_external_api.py  test_login_api.py  test_manager.py  test_models.py  test_seller_register_api.py
